fixed align is not work

--- a/src/swiperBlot.less
+++ b/src/swiperBlot.less
@@ -83,3 +83,7 @@
 .swiper-slide {
   height: fit-content;
 }
+
+.swiper-container {
+  display: inline-block !important;
+}
